--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('HousePrice.csv')"
+    "df = pd.read_csv('BeerConsumption.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -47,99 +47,87 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Price (All)</th>\n",
-       "      <th>Change (All)</th>\n",
-       "      <th>Price (New)</th>\n",
-       "      <th>Change (New)</th>\n",
-       "      <th>Price (Modern)</th>\n",
-       "      <th>Change (Modern)</th>\n",
-       "      <th>Price (Older)</th>\n",
-       "      <th>Change (Older)</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>TemperatureMedium</th>\n",
+       "      <th>TemperatureMin</th>\n",
+       "      <th>TemperatureMax</th>\n",
+       "      <th>Precipitacao (mm)</th>\n",
+       "      <th>EndOfWeek</th>\n",
+       "      <th>Consumption</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1952-11-01</td>\n",
-       "      <td>1891</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>27,3</td>\n",
+       "      <td>23,9</td>\n",
+       "      <td>32,5</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2107</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1524</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>25.461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1953-02-01</td>\n",
-       "      <td>1891</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>27,02</td>\n",
+       "      <td>24,5</td>\n",
+       "      <td>33,5</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2107</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1542</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>28.972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1953-05-01</td>\n",
-       "      <td>1891</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2107</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1542</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>24,82</td>\n",
+       "      <td>22,4</td>\n",
+       "      <td>29,9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>30.814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1953-08-01</td>\n",
-       "      <td>1881</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2117</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1524</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>23,98</td>\n",
+       "      <td>21,5</td>\n",
+       "      <td>28,6</td>\n",
+       "      <td>1,2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>29.799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1953-11-01</td>\n",
-       "      <td>1872</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2117</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1975</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>1542</td>\n",
-       "      <td>1.2</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>23,82</td>\n",
+       "      <td>21</td>\n",
+       "      <td>28,3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date  Price (All)  Change (All)  Price (New)  Change (New)  \\\n",
-       "0  1952-11-01         1891           0.0         2107           0.0   \n",
-       "1  1953-02-01         1891           0.0         2107           0.0   \n",
-       "2  1953-05-01         1891           0.0         2107           0.0   \n",
-       "3  1953-08-01         1881           0.0         2117           0.0   \n",
-       "4  1953-11-01         1872          -1.0         2117           0.5   \n",
+       "         Data TemperatureMedium TemperatureMin TemperatureMax  \\\n",
+       "0  2015-01-01              27,3           23,9           32,5   \n",
+       "1  2015-01-02             27,02           24,5           33,5   \n",
+       "2  2015-01-03             24,82           22,4           29,9   \n",
+       "3  2015-01-04             23,98           21,5           28,6   \n",
+       "4  2015-01-05             23,82             21           28,3   \n",
        "\n",
-       "   Price (Modern)  Change (Modern)  Price (Older)  Change (Older)  \n",
-       "0            2020              0.0           1524             0.0  \n",
-       "1            2002              0.0           1542             0.0  \n",
-       "2            2002              0.0           1542             0.0  \n",
-       "3            2002              0.0           1524             0.0  \n",
-       "4            1975             -2.2           1542             1.2  "
+       "  Precipitacao (mm)  EndOfWeek  Consumption  \n",
+       "0                 0        0.0       25.461  \n",
+       "1                 0        0.0       28.972  \n",
+       "2                 0        1.0       30.814  \n",
+       "3               1,2        1.0       29.799  \n",
+       "4                 0        0.0       28.900  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -158,19 +146,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 261 entries, 0 to 260\n",
-      "Data columns (total 9 columns):\n",
-      "Date               261 non-null object\n",
-      "Price (All)        261 non-null int64\n",
-      "Change (All)       261 non-null float64\n",
-      "Price (New)        261 non-null int64\n",
-      "Change (New)       261 non-null float64\n",
-      "Price (Modern)     261 non-null int64\n",
-      "Change (Modern)    261 non-null float64\n",
-      "Price (Older)      261 non-null int64\n",
-      "Change (Older)     261 non-null float64\n",
-      "dtypes: float64(4), int64(4), object(1)\n",
-      "memory usage: 18.4+ KB\n"
+      "RangeIndex: 941 entries, 0 to 940\n",
+      "Data columns (total 7 columns):\n",
+      "Data                 365 non-null object\n",
+      "TemperatureMedium    365 non-null object\n",
+      "TemperatureMin       365 non-null object\n",
+      "TemperatureMax       365 non-null object\n",
+      "Precipitacao (mm)    365 non-null object\n",
+      "EndOfWeek            365 non-null float64\n",
+      "Consumption          365 non-null float64\n",
+      "dtypes: float64(2), object(5)\n",
+      "memory usage: 51.5+ KB\n"
      ]
     }
    ],
@@ -180,38 +166,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=df[['Price (Older)', 'Price (New)']]"
+    "df=df[['TemperatureMedium', 'Consumption']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=df[['Price (Older)']]\n",
-    "Y=df[['Price (New)']]"
+    "X=df[['TemperatureMedium']]\n",
+    "Y=df[['Consumption']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-       "         normalize=False)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '25,96'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-e8baebda8092>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mxTrain\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mxTest\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0myTrain\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0myTest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlreg\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mLinearRegression\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mlreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxTrain\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0myTrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\users\\user1\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\linear_model\\base.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    456\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    457\u001b[0m         X, y = check_X_y(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[1;32m--> 458\u001b[1;33m                          y_numeric=True, multi_output=True)\n\u001b[0m\u001b[0;32m    459\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    460\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\user1\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    745\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    746\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 747\u001b[1;33m                     estimator=estimator)\n\u001b[0m\u001b[0;32m    748\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    749\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[1;32mc:\\users\\user1\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    560\u001b[0m         \u001b[1;31m# make sure we actually converted to numeric:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    561\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdtype_numeric\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"O\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 562\u001b[1;33m             \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    563\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_nd\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    564\u001b[0m             raise ValueError(\"Found array with dim %d. %s expected <= 2.\"\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '25,96'"
+     ]
     }
    ],
    "source": [
